crates/analyzer/tests/snapshots/errors__duplicate_method_in_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate function names in `contract Foo`
  ┌─ compile_errors/duplicate_method_in_contract.fe:2:5
  │
2 │     pub fn bar() {}
  │     ^^^^^^^^^^^^^^^ `bar` first defined here
3 │ 
4 │     pub fn bar() {}
  │     --------------- `bar` redefined here


